--- a/04-CSS-Layouts/css-grid.html
+++ b/04-CSS-Layouts/css-grid.html
@@ -52,8 +52,10 @@
         grid-template-rows: 1fr 1fr;
         /* height: 500px; */
         /* gap: 30px; */
-        column-gap: 20px;
-        row-gap: 40px;
+        column-gap: 20px; /*tạo khoản cách 
+        theo chiều dọc giữa các Item*/
+        row-gap: 40px; /*tạo khoản cách 
+        theo chiều ngang giữa các Item*/
         display: none;
       }
 
@@ -81,7 +83,8 @@
         display: grid;
         grid-template-columns: 125px 200px 125px;
         grid-template-rows: 250px 100px;
-        gap: 50px;
+        gap: 50px; /*tạo khoản cách
+        cho chiều dọc và chiều ngang giữa các Item*/
 
         /*CĂN CHỈNH ĐƯỜNG RAY BÊN TRONG CONTAINER,
         TỰ CHỈNH KÍCH THƯỚC ĐƯỜNG RAY*/
