--- a/04-CSS-Layouts/Challenge2/challenge2 flexbox/challenge2.html
+++ b/04-CSS-Layouts/Challenge2/challenge2 flexbox/challenge2.html
@@ -10,11 +10,11 @@
 
       <div class="container">
         <img
+          class="product-img"
           src="challenges.jpg"
           alt="All Star Shoe"
           width="250"
           height="250"
-          class="product-img"
         />
 
         <div class="product-info">
@@ -28,12 +28,13 @@
           </p>
           <a
             class="more-info"
+            target="_blank"
             href="https://www.converse.com/country-language-selector"
             >More information &rarr;</a
           >
 
-          <div class="product-colors">
-            <div class="color"></div>
+          <div class="colors">
+            <div class="color color"></div>
             <div class="color color-blue"></div>
             <div class="color color-red"></div>
             <div class="color color-yellow"></div>
@@ -42,7 +43,7 @@
           </div>
         </div>
 
-        <div class="product-detail">
+        <div class="product-details">
           <h3 class="detail-title">Product details</h3>
           <ul class="detail-list">
             <li>Lightweight, durable canvas sneaker</li>
