--- a/04-CSS-Layouts/flexbox.html
+++ b/04-CSS-Layouts/flexbox.html
@@ -6,75 +6,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox</title>
     <style>
-      .el--1 {
-        background-color: blueviolet;
-      }
-      .el--2 {
-        background-color: orangered;
-      }
-      .el--3 {
-        background-color: green;
-        height: 150px;
-      }
-      .el--4 {
-        background-color: goldenrod;
-      }
-      .el--5 {
-        background-color: palevioletred;
-      }
-      .el--6 {
-        background-color: steelblue;
-      }
-      .el--7 {
-        background-color: yellow;
-      }
-      .el--8 {
-        background-color: crimson;
-      }
+        .el--1 {
+          background-color: blueviolet;
+        }
+        .el--2 {
+          background-color: orangered;
+        }
+        .el--3 {
+          background-color: green;
+          height: 150px;
+        }
+        .el--4 {
+          background-color: goldenrod;
+        }
+        .el--5 {
+          background-color: palevioletred;
+        }
+        .el--6 {
+          background-color: steelblue;
+        }
+        .el--7 {
+          background-color: yellow;
+        }
+        .el--8 {
+          background-color: crimson;
+        }
 
-      .container {
-        /* STARTER */
-        font-family: sans-serif;
-        background-color: #ddd;
-        font-size: 32px;
-        margin: 40px;
+        .container {
+          /* STARTER */
+          font-family: sans-serif;
+          background-color: #ddd;
+          font-size: 32px;
+          margin: 40px;
 
-        /* FLEXBOX */
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        gap: 10px;
-      }
+          /* FLEXBOX */
+          display: flex;
+          align-items: center; /*căn chỉnh item theo chiều dọc*/
+          justify-content: flex-start; /*căn chỉnh Track theo chiều ngang*/
+          gap: 10px; tạo khoản cách giữa các Item
+        }
 
-      .el {
-        /*
-        DEFAULT:
-        flex-grow: 0;
-        flex-shrink: 1;
-        flex-basis: auto;
-  */
-        /* flex-basis: 200px; */
-        /* flex-shrink: 0; */
-        /* flex: 0 0 200px; */
+        .el {
+          /*
+        Mặc định:
+        flex-grow: 0;  =(1) Chia đều size các Item
+                           cho bằng size vùng chứa
+                       =(0) Item có size đủ chứa nội dung
 
-        /* flex-grow: 1; */
-        flex: 1;
-      }
+       flex-shrink: 1; = (0) Item full khoản cách đươc chỉ định
+                              và có thể vượt vùng chứa
+                       = (1) Item chia size được chỉ định
+                             nhưng ko lớn hơn vùng chứa
 
-      .el--1 {
-        align-self: flex-start;
-        /* order: 2; */
-        /* flex-grow: 2; */
-      }
+      flex-basis: auto; _chỉ định chiều ngang của 1 Item
+        */
 
-      .el--5 {
-        align-self: stretch;
-        order: 1;
-      }
+          /* flex-basis: 200px; */
+          /* flex-shrink: 0; */
+          /* flex: 0 0 200px; _ Viết tắt (grow shrink basis)*/
+          /* flex-grow: 1; */
+          flex: 1;
+        }
 
-      .el--6 {
-        order: -1;
-      }
+        .el--1 {
+          align-self: flex-start; /*ghi đè căn chỉnh item theo chiều dọc*/
+          /* order: 2; */
+          /* flex-grow: 2; */
+        }
+
+        .el--5 {
+          align-self: stretch;
+          order: 1;
+          /*tất cả các element giá trị đều = 0,
+          muốn chuyển 1 element ra sau chót thì cho giá trị = 1*/
+        }
+
+        .el--6 {
+          order: -1; /*tất cả các element giá trị đều = 0,
+          muốn chuyển 1 element lên đầu thì cho giá trị = -1*/
+        }
     </style>
   </head>
   <body>
